kubernetes/stage/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderator
  namespace: moderator-stage
  labels:
    app: moderator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderator
  template:
    metadata:
      labels:
        app: moderator
    spec:
      containers:
      - name: moderator-web
        image: 783633885093.dkr.ecr.us-west-2.amazonaws.com/moderator:9f8c0707f7cf8bc887f68b89b8ba48038eaa7a0b
        ports:
        - containerPort: 8000
