kubernetes/stage/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: moderator-stage
  namespace: moderator-stage
spec:
  type: ClusterIP
  selector:
    app: moderator
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
